syntax = "proto3";

package api.voiceagent;

option go_package = "store/api/voiceagent;voiceagent";

// UserProfile (用户档案): 存储用户的个性化信息。
// 包含用户基本信息、兴趣、目标以及 AI 观察到的特点。
message UserProfile {
  // _id: 档案唯一标识。
  string _id = 1 [json_name = "_id"];

  // userId: 所属用户 ID (唯一约束)。
  string userId = 2;

  // nickname: 用户希望被称呼的名字。
  string nickname = 3;

  // birthday: 生日 (格式: YYYY-MM-DD)。
  string birthday = 4;

  // interests: 兴趣爱好列表。
  repeated string interests = 5;

  // goals: 近期目标列表。
  repeated string goals = 6;

  // personality: AI 观察到的性格特点描述。
  string personality = 7;

  // emotionBaseline: 情绪基线描述。
  string emotionBaseline = 8;

  // bio: 用户自我介绍。
  string bio = 9;

  // timezone: 用户时区。
  string timezone = 10;

  int64 createdAt = 11;
  int64 updatedAt = 12;
}
